[tool.poetry]
name = "airton_ac"
version = "2.2.1"
description = "Control an Airton AC device over LAN."
authors = ["Gabriel Pajot <gab@les-cactus.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gpajot/airton-ac"
include = ["airton_ac/py.typed"]
exclude = ["airton_ac/domoticz/types.py"]

[tool.poetry.dependencies]
python = ">=3.8"

local-tuya = ">=2.1,<3"
local-tuya-domoticz-tools = { version = ">=1.1,<2", optional = true }

[tool.poetry.extras]
domoticz = ["local-tuya-domoticz-tools"]

[tool.poetry.group.test.dependencies]
pytest = "==8.1.1"
pytest-asyncio = "==0.23.6"
pytest-mock = "==3.14.0"
ruff = "==0.3.7"
mypy = "==1.9.0"
pre-commit = "==3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
